src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__unterminated_scope.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        {\n            var a = 1;\n            print a;\n        \")"
---
stderr:
Error: 
   ╭─[<unknown>:3:2]
   │
 2 │         {
   │         ┬  
   │         ╰── This { must be terminated
   │ 
 5 │ 
   │        ┬  
   │        ╰── Expected }
───╯


